--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "shelljs": "^0.8.3"
   },
   "devDependencies": {
+    "ava": "^1.4.1",
+    "inquirer-test": "^2.0.1",
     "jest": "^24.6.0"
   },
   "jest": {
