--- a/templates/react-redux-webpack/package.json
+++ b/templates/react-redux-webpack/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-redux-webpack",
   "version": "0.1.0",
-  "description": "React Webpack Starter",
+  "description": "React Redux Webpack Starter",
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/desmondtoyus/react-pack.git"
+    "url": "https://github.com/desmondtoyus/react-webpacket.git"
   },
   "keywords": [
     "React",
@@ -27,9 +27,9 @@
   "author": "Desmond Ademiluyi",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/desmondtoyus/react-pack/issues"
+    "url": "https://github.com/desmondtoyus/react-webpacket/issues"
   },
-  "homepage": "https://github.com/desmondtoyus/react-pack#readme",
+  "homepage": "https://github.com/desmondtoyus/react-webpacket#readme",
   "jest": {
     "setupFilesAfterEnv": [
       "<rootDir>__tests__/setup/setupEnzyme.js"
@@ -65,6 +65,7 @@
     "react-helmet": "^5.2.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.8.6",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-router": "^2.1.2",
