--- a/templates/react-redux-webpack/package.json
+++ b/templates/react-redux-webpack/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose",
+    "lint": "eslint ./ --cache --ignore-pattern .gitignore",
     "test:watch": "jest --watchAll --verbose",
     "test:coverage": "jest --verbose --coverage",
-    "dev": "webpack --open --config webpack.dev.js",
-    "build": "rimraf ./build && webpack --config webpack.prod.js",
-    "start": "babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server --mode development --port 8008 --open --history-api-fallback",
+    "dev": "npm test && webpack --open --config webpack.dev.js",
+    "build": "npm test && rimraf ./build && webpack --config webpack.prod.js",
+    "start": "npm test && babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server --mode development --port 8008 --open --history-api-fallback",
     "startapp": "concurrently \"npm start\" \"nodemon server\""
   },
   "repository": {
@@ -30,7 +31,11 @@
     "url": "https://github.com/desmondtoyus/react-webpacket/issues"
   },
   "homepage": "https://github.com/desmondtoyus/react-webpacket#readme",
+  "pre-commit": [
+    "lint"
+  ],
   "jest": {
+    "collectCoverage": true,
     "setupFilesAfterEnv": [
       "<rootDir>__tests__/setup/setupEnzyme.js"
     ],
@@ -71,6 +76,7 @@
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.3",
+    "sinon": "^7.3.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack-merge": "^4.2.1"
   },
@@ -99,6 +105,7 @@
     "node-sass": "4.9.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "0.12.7",
+    "pre-commit": "^1.2.2",
     "react-testing-library": "^6.0.0",
     "redux-mock-store": "^1.5.3",
     "sass-loader": "7.1.0",
