--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "keywords": [
     "React",
+    "express",
+    "sequelize",
+    "passport",
     "Redux",
     "Webpack",
     "Eslint",
