--- a/templates/react-redux-webpack-express-sequelize-passport/package.json
+++ b/templates/react-redux-webpack-express-sequelize-passport/package.json
@@ -65,6 +65,7 @@
     "express": "^4.16.4",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
+    "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pg": "^7.9.0",
