--- a/templates/react-redux-webpack-express-sequelize-passport/package.json
+++ b/templates/react-redux-webpack-express-sequelize-passport/package.json
@@ -118,6 +118,7 @@
     "redux-mock-store": "^1.5.3",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
+    "url-loader": "^1.1.2",
     "webpack": "4.20.2",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
