--- a/templates/react-redux-webpack/package.json
+++ b/templates/react-redux-webpack/package.json
@@ -10,7 +10,7 @@
     "test:coverage": "jest --verbose --coverage",
     "dev": "webpack --open --config webpack.dev.js",
     "build": "rimraf ./build && webpack --config webpack.prod.js",
-    "start": "babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server --mode development --port 8008 --open --history-api-fallback",
+    "start": "babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server --open --config webpack.dev.js",
     "startapp": "concurrently \"npm start\" \"nodemon server\""
   },
   "repository": {
@@ -110,6 +110,7 @@
     "redux-mock-store": "^1.5.3",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
+    "url-loader": "^1.1.2",
     "webpack": "4.20.2",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
