--- a/templates/react-redux-webpack-express-sequelize-passport/package.json
+++ b/templates/react-redux-webpack-express-sequelize-passport/package.json
@@ -8,10 +8,11 @@
     "lint": "eslint ./ --cache --ignore-pattern .gitignore",
     "test:watch": "jest --watchAll --verbose",
     "test:coverage": "jest --verbose --coverage",
-    "dev": "rimraf ./build && webpack --open --config webpack.dev.js",
-    "build": "rimraf ./build && webpack --config webpack.prod.js",
-    "start": "babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server --open --config webpack.dev.js",
-    "startapp": "concurrently \"npm run dev\" \"nodemon server\""
+    "dev-build": "rimraf ./build && webpack --open --watch --progress --development --config webpack.dev.js",
+    "build": "rimraf ./build && webpack --progress --production --config webpack.prod.js",
+    "prod": "npm run build",
+    "dev": "rimraf ./build && webpack --development --config webpack.dev.js",
+    "start": "npm run dev-build & nodemon server"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,16 @@
   ],
   "jest": {
     "collectCoverage": true,
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    },   
+     "transformIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ],
     "setupFilesAfterEnv": [
       "<rootDir>__tests__/setup/setupEnzyme.js"
     ],
@@ -66,6 +77,7 @@
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "mysql2": "^1.6.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pg": "^7.9.0",
@@ -83,6 +95,7 @@
     "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.3",
     "sequelize": "^5.3.5",
+    "shortid": "^2.2.14",
     "sinon": "^7.3.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack-merge": "^4.2.1"
@@ -91,6 +104,7 @@
     "@babel/core": "7.1.2",
     "@babel/node": "7.0.0",
     "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "^10.0.1",
@@ -111,13 +125,13 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.11",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "0.12.7",
     "pre-commit": "^1.2.2",
     "react-testing-library": "^6.0.0",
     "redux-mock-store": "^1.5.3",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
+    "supertest": "^3.4.2",
     "url-loader": "^1.1.2",
     "webpack": "4.20.2",
     "webpack-cli": "^3.2.3",
