--- a/templates/react-redux-webpack/.babelrc
+++ b/templates/react-redux-webpack/.babelrc
@@ -1,9 +1,14 @@
 {
-    "presets": [
-      "@babel/env",
-      "@babel/react"
-    ],
-    "plugins": [
-      "@babel/plugin-proposal-class-properties"
-    ]
+  "presets": [
+    "@babel/env",
+    "@babel/react"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
+  ],
+    "env": {
+  "test": {
+    "plugins": ["@babel/plugin-transform-runtime"]
   }
+}
+}
