--- a/templates/react-redux-webpack/.env
+++ b/templates/react-redux-webpack/.env
@@ -1,9 +1,2 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=s1mpl3
 NODE_ENV=development
-
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+PORT=8008
