--- a/templates/react-redux-webpack/package.json
+++ b/templates/react-redux-webpack/package.json
@@ -8,10 +8,11 @@
     "lint": "eslint ./ --cache --ignore-pattern .gitignore",
     "test:watch": "jest --watchAll --verbose",
     "test:coverage": "jest --verbose --coverage",
-    "dev": "webpack --open --config webpack.dev.js",
-    "build": "rimraf ./build && webpack --config webpack.prod.js",
-    "start": "babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server --open --config webpack.dev.js",
-    "startapp": "concurrently \"npm start\" \"nodemon server\""
+    "dev-build": "rimraf ./build && webpack --open --watch --progress --development --config webpack.dev.js",
+    "build": "rimraf ./build && webpack --progress --production --config webpack.prod.js",
+    "prod": "npm run build",
+    "dev": "rimraf ./build && webpack --development --config webpack.dev.js",
+    "start": "npm run dev-build & nodemon server"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,16 @@
   ],
   "jest": {
     "collectCoverage": true,
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    },   
+     "transformIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ],
     "setupFilesAfterEnv": [
       "<rootDir>__tests__/setup/setupEnzyme.js"
     ],
@@ -57,12 +68,19 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
+    "mysql2": "^1.6.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "pg": "^7.9.0",
     "popper.js": "^1.14.7",
     "prop-types": "^15.7.2",
     "react": "^16.5.2",
@@ -76,6 +94,8 @@
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.3",
+    "sequelize": "^5.3.5",
+    "shortid": "^2.2.14",
     "sinon": "^7.3.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack-merge": "^4.2.1"
@@ -84,6 +104,7 @@
     "@babel/core": "7.1.2",
     "@babel/node": "7.0.0",
     "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "^10.0.1",
@@ -102,14 +123,15 @@
     "html-webpack-plugin": "3.2.0",
     "jest": "^24.3.1",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "4.9.3",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.11",
     "path": "0.12.7",
     "pre-commit": "^1.2.2",
     "react-testing-library": "^6.0.0",
     "redux-mock-store": "^1.5.3",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
+    "supertest": "^3.4.2",
     "url-loader": "^1.1.2",
     "webpack": "4.20.2",
     "webpack-cli": "^3.2.3",
